--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 streamlit==1.36.0
-opencv-python-headless
-ultralytics
+streamlit-option-menu==0.3.13
+opencv-python==4.9.0.80
+ultralytics==8.2.50
+numpy==1.26.4
+urllib3==2.2.0
+pymongo==4.6.1
+Werkzeug==3.0.1
